# vdrs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
Resource/: Shader.frag
Source/: vdrs.cpp  vdrs.hpp  vdrspch.cpp  vdrspch.hpp
